--- a/Fraud_prediction.ipynb
+++ b/Fraud_prediction.ipynb
@@ -734,7 +734,7 @@
         "    'amt': [150.0],  # Example amount\n",
         "    'city_pop': [3000],  # Example city population\n",
         "    'zip': [84002],  # Example zip code\n",
-        "    'category': ['travel'],  # Example category (make sure it exists in your training data)\n",
+        "    'category': ['travel'],
         "    'gender': ['M'],  # Example gender\n",
         "    'city': ['Bellmore'],  # Example city\n",
         "    'state': ['NY'],  # Example state\n",
