--- a/Fraud_prediction.ipynb
+++ b/Fraud_prediction.ipynb
@@ -639,7 +639,7 @@
       "metadata": {
         "id": "6kTeH2H-8gro"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -668,7 +668,7 @@
         "id": "mgX07S5P-p-P",
         "outputId": "17e1cb5d-dd2f-4a66-d250-41a48b63465a"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -705,7 +705,7 @@
         },
         "outputId": "6ff11899-05b9-4b69-f1e1-ed1b9d65844a"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -734,7 +734,7 @@
         "    'amt': [150.0],  # Example amount\n",
         "    'city_pop': [3000],  # Example city population\n",
         "    'zip': [84002],  # Example zip code\n",
-        "    'category': ['travel'],
+        "    'category': ['travel'],  # Example category (make sure it exists in your training data)\n",
         "    'gender': ['M'],  # Example gender\n",
         "    'city': ['Bellmore'],  # Example city\n",
         "    'state': ['NY'],  # Example state\n",
@@ -759,7 +759,7 @@
         "id": "2J3FLBv3BEzJ",
         "outputId": "b274e281-3300-4e8c-a306-5ff5db106b51"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
