--- a/Fraud_prediction.ipynb
+++ b/Fraud_prediction.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNu5qQ+4LhzZQsisq/JfIC2",
+      "authorship_tag": "ABX9TyPE7FK9ZP32GOXH6KkuOWES",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -745,14 +745,14 @@
       "source": [
         "# making a prediction\n",
         "new_data = pd.DataFrame({\n",
-        "    'amt': [150.0],\n",
-        "    'city_pop': [3000],\n",
+        "    'amt': [15099.0],\n",
+        "    'city_pop': [30077099],\n",
         "    'zip': [84002],\n",
         "    'category': ['travel'],\n",
         "    'gender': ['M'],\n",
-        "    'city': ['Bellmore'],\n",
+        "    'city': ['Columbia'],\n",
         "    'state': ['NY'],\n",
-        "    'job': ['Musician']\n",
+        "    'job': ['Curator']\n",
         "})\n",
         "\n",
         "# Preprocess the new input\n",
@@ -771,16 +771,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2J3FLBv3BEzJ",
-        "outputId": "65b382c5-469b-41a3-b9df-9c3b9d896c85"
+        "outputId": "26f7add8-83ee-4373-919b-1416b29e488c"
       },
-      "execution_count": 11,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Prediction (0: Not Fraud, 1: Fraud): 0.0\n",
-            "Prediction Probability of Fraud: 0.0\n"
+            "Prediction Probability of Fraud: 0.05\n"
           ]
         }
       ]
